# rules_jvm_test_discovery

./: .gitignore  BUILD.bazel  WORKSPACE  java_test_discovery.bzl  junit.bzl  test_discovery_args.bzl
src/failingtests/com/wix/rulesjvm/test_discovery/failing/: BUILD.bazel  SimpleTest.java
src/java/com/wix/rulesjvm/test_discovery/: BUILD  BUILD.bazel  DiscoveredTestSuite.java  DiscoveredTestSuite.scala  FilteredRunner.java  FilteredRunnerBuilder.java  FilteredRunnerBuilder.scala  FilteredRunnerBuilderImpl.java  PrefixSuffixTestDiscoveringSuite.java
src/java/com/wix/sample/: BUILD.bazel  SimpleTest.java
src/javatests/com/wix/rulesjvm/test_discovery/: BUILD.bazel  ConcreteImplementationTest.java  DeclaredInRunWith.java  FilterTest.java  JUnitCompileTimeDep.java  JUnitRuntimeDep.java  JunitCustomRunner.java  JunitCustomRunnerTest.java  JunitSuffixE2E.java  JunitSuffixIT.java  JunitWithDepsTest.java  OtherCustomPrefixJunit.java  RunWithSupportedTest.java  SingleTestSoTargetWillNotFailDueToNoTestsTest.java  SomeAbstractTest.java  SomeHelperForTest.java  SomeInterfaceTest.java  TestJunitCustomPrefix.java  TestJunitInnerClass.java
src/javatests/com/wix/sample/: BUILD.bazel  SimpleTest.java
