load("//:java_test_discovery.bzl", "java_test_discovery")

java_library(
    name = "SomeSimpleTest_Source",
    srcs = ["SimpleTest.java"],
    deps = ["@junit_junit"],
)
java_test_discovery(
    name = "SomeSimpleTest",
    tests_from = [":SomeSimpleTest_Source"],
    size = "small",
    print_discovered_classes = True,
    suffixes = ["Test"],
)