java_library(
    name = "test_discovery",
    srcs = [
        "DiscoveredTestSuite.java",
        "FilteredRunnerBuilder.java",
        "FilteredRunnerBuilderImpl.java",
        "PrefixSuffixTestDiscoveringSuite.java"
    ],
    visibility = ["//visibility:public"],
    deps = ["@junit_junit"],
)

java_import(
    name = "bazel_test_runner_deploy",
    jars = ["@bazel_tools//tools/jdk:TestRunner_deploy.jar"],
    visibility = ["//visibility:public"],
)