load("//:java_test_discovery.bzl", "java_test_discovery")

java_library(
    name = "JUnitCompileTimeDep",
    srcs = ["JUnitCompileTimeDep.java"],
)

java_library(
    name = "JUnitRuntimeDep",
    srcs = ["JUnitRuntimeDep.java"],
)

java_library(
    name = "JunitWithDepsTest_Source",
    srcs = ["JunitWithDepsTest.java"],
    runtime_deps = [":JUnitRuntimeDep"],
    deps = ["//external:rules_jvm_test_discovery/dependency/junit/junit",
            "//external:rules_jvm_test_discovery/dependency/hamcrest/hamcrest_core",
            ":JUnitCompileTimeDep"],
)

java_test_discovery(
    name = "JunitTestWithDeps",
    tests_from = [":JunitWithDepsTest_Source"],
    size = "small",
    print_discovered_classes = True,
    jvm_flags = ["-XX:HeapDumpPath=/some/custom/path"],
    suffixes = ["Test"],
)

java_library(
    name = "JunitMultipleSuffixes_Source",
    srcs = ["JunitSuffixE2E.java", "JunitSuffixIT.java"],
     deps = ["//external:rules_jvm_test_discovery/dependency/junit/junit",
             "//external:rules_jvm_test_discovery/dependency/hamcrest/hamcrest_core"],
)

java_test_discovery(
    name = "JunitMultipleSuffixes",
    tests_from = [":JunitMultipleSuffixes_Source"],
    size = "small",
    print_discovered_classes = True,
    suffixes = [
        "E2E",
        "IT",
    ],
)

java_library(
    name = "JunitMultiplePrefixes_Source",
    srcs = ["OtherCustomPrefixJunit.java", "TestJunitCustomPrefix.java"],
    deps = ["//external:rules_jvm_test_discovery/dependency/junit/junit",
            "//external:rules_jvm_test_discovery/dependency/hamcrest/hamcrest_core"],
)

java_test_discovery(
    name = "JunitMultiplePrefixes",
    tests_from = [":JunitMultiplePrefixes_Source"],
    size = "small",
    prefixes = [
        "Test",
        "OtherCustomPrefix",
    ],
    print_discovered_classes = True,
)

java_library(
    name = "JunitPrefixesAndSuffixes_Source",
    srcs = [
       "OtherCustomPrefixJunit.java",
       "TestJunitCustomPrefix.java",
       "JunitSuffixE2E.java",
       "JunitSuffixIT.java"
    ],
    deps = ["//external:rules_jvm_test_discovery/dependency/junit/junit",
            "//external:rules_jvm_test_discovery/dependency/hamcrest/hamcrest_core"],
)

java_test_discovery(
    name = "JunitPrefixesAndSuffixes",
    tests_from = [":JunitPrefixesAndSuffixes_Source"],
    size = "small",
    prefixes = [
        "Test",
        "OtherCustomPrefix",
    ],
    suffixes = [
        "E2E",
        "IT",
    ],
    print_discovered_classes = True,
)